fix image sizing on firefox and big screens

--- a/src/components/grid-lines/style.css
+++ b/src/components/grid-lines/style.css
@@ -3,4 +3,5 @@
   width: 1px;
   height: 100%;
   top: 0;
+  z-index: 99999999;
 }
